# timeseries-etl

./: .gitignore  .pre-commit-config.yaml  README.md  generate_schema.py  pyproject.toml
config/: bom_params.json
data/: data.csv
dev-docker/: Dockerfile  dev-requirements.txt  docker-compose.yml
docker/dev/: Dockerfile  docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yml
exploration/: stations_layout.qgz  tinyflux_to_pandas.ipynb
prod-docker/: Dockerfile  docker-compose.yml
src/: config.py  run.py
src/timeseries_etl/: app.py  config.py  oversight.py
src/timeseries_etl/clients/: bom_etl.py  p110.py  request.py
src/timeseries_etl/tsdb/: engine.py
src/timeseries_etl/workers/: bom_etl.py  mqtt_rx.py  sched.py  tsdb_engine.py
src/tsdb/: engine.py
src/workers/: bom_etl.py
tests/: conftest.py  report.html  test_app.py  test_bom_etl.py  test_config.py  test_engine.py  test_engine_maintenance.py  test_oversight.py  test_p110.py
tests/data/: test.db
tests/test_data/: qw3sg5tn-temp.db.bak-20240324123009  report.html
tests/test_data/bom/: excerpt.json  single_observation.json
tests/test_data/bom/schema/: bom.schema.json  bom_schema.ipynb
tests/test_data/bom/schema/bom_json_obs/: IDD60801.94000.json  IDD60801.94002.json  IDD60801.94003.json  IDD60801.94100.json  IDD60801.94102.json  IDD60801.94105.json  IDD60801.94106.json  IDD60801.94108.json  IDD60801.94109.json  IDD60801.94110.json  IDD60801.94112.json  IDD60801.94116.json  IDD60801.94119.json  IDD60801.94120.json  IDD60801.94121.json  IDD60801.94122.json  IDD60801.94125.json  IDD60801.94127.json  IDD60801.94128.json  IDD60801.94130.json  IDD60801.94131.json  IDD60801.94135.json  IDD60801.94137.json  IDD60801.94139.json  IDD60801.94140.json  IDD60801.94141.json  IDD60801.94143.json  IDD60801.94147.json  IDD60801.94150.json  IDD60801.94152.json  IDD60801.94153.json  IDD60801.94161.json  IDD60801.94162.json  IDD60801.94212.json  IDD60801.94216.json  IDD60801.94217.json  IDD60801.94221.json  IDD60801.94222.json  IDD60801.94225.json  IDD60801.94231.json  (+770 more)
