[project]
name = "etl-timeseries"
authors = [
    {name = "Timothy Holmes", email = "tim.a.holmes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "schedule==1.2.1",
    "requests==2.31.0"
]
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "flake8-black",
    "flake8-pyproject",
    "pytest-cov",
    "coverage"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
pythonpath = "src"

[tool.flake8]
max-line-length = 88
count = true
exclude = "./build"

[tool.black]
exclude = "./build"